--- a/components/Services/Cards/cards.module.scss
+++ b/components/Services/Cards/cards.module.scss
@@ -6,7 +6,7 @@
   max-width: 750px;
   margin-top: 45px;
 
-  @include largeTablet() {
+  @include mobile() {
     grid-template-columns: 1fr 1fr;
     margin-left: 45px;
   }
