--- a/components/Services/services.module.scss
+++ b/components/Services/services.module.scss
@@ -23,7 +23,7 @@
   align-items: center;
   flex-direction: column;
 
-  @include largeTablet() {
+  @include desktop() {
     flex-direction: row;
   }
 }
